force-app/main/default/objects/Case/fields/Access_to_Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Test_Account__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Usually includes URL, password &amp; username (Confluence: Können wir weitere ATS integrieren)</inlineHelpText>
    <label>Access to Test Account</label>
    <type>TextArea</type>
</CustomField>