force-app/main/default/objects/Case/fields/Account_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Last_Name__c</fullName>
    <formula>Account.Contact_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Last Name</label>
    <type>Text</type>
</CustomField>