force-app/main/default/objects/Case/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <description>Reference Account Field: Account Description</description>
    <formula>Account.Description_c__c</formula>
    <inlineHelpText>Reference Account Field: Account Description</inlineHelpText>
    <label>Account Description</label>
    <type>Text</type>
</CustomField>