force-app/main/default/objects/Case/fields/Account_Integration_Setup_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Integration_Setup_Info__c</fullName>
    <description>RO - 2458</description>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Account Integration Setup Info</label>
    <type>Text</type>
</CustomField>