force-app/main/default/objects/Case/fields/Action_taken_before_raising_this_case__c.field-meta.xml
<CustomField>
    <fullName>Action_taken_before_raising_this_case__c</fullName>
    <description>RO - 2557</description>
    <inlineHelpText>Please document the actions taken before raising the case.</inlineHelpText>
    <label>Actions taken before raising this case ?</label>
    <type>TextArea</type>
</CustomField>