force-app/main/default/objects/Case/fields/Actions_taken_before_raising_this_case__c.field-meta.xml
<CustomField>
    <fullName>Actions_taken_before_raising_this_case__c</fullName>
    <description>RO - 2251</description>
    <inlineHelpText>Please select everything you already tried. Always check what you can do to improve the job performance using the Sales Success Handbook, before submitting this Case.</inlineHelpText>
    <label>Actions taken before raising this case?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screening questions adjusted</fullName>
            </value>
            <value>
                <fullName>Radius adjusted</fullName>
            </value>
            <value>
                <fullName>Easy Apply adjusted</fullName>
            </value>
            <value>
                <fullName>Employer profile optimized</fullName>
            </value>
            <value>
                <fullName>Job Ad title optimized</fullName>
            </value>
            <value>
                <fullName>Job information completed</fullName>
            </value>
            <value>
                <fullName>Job description optimized</fullName>
            </value>
            <value>
                <fullName>Visual material optimized</fullName>
            </value>
            <value>
                <fullName>AGG compliance checked</fullName>
            </value>
            <value>
                <fullName>Social media ads reviewed</fullName>
            </value>
            <value>
                <fullName>Other (please give details in description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>