force-app/main/default/objects/Case/fields/Actual_REACH_Campaign_start_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_REACH_Campaign_start_date__c</fullName>
    <description>RO - 2224</description>
    <inlineHelpText>Shows the actual date the REACH campaign started</inlineHelpText>
    <label>Actual REACH Campaign start date</label>
    <type>Date</type>
</CustomField>