force-app/main/default/objects/Case/fields/Additional_Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Billing_Information__c</fullName>
    <label>Additional Billing Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>