force-app/main/default/objects/Case/fields/Age_Business_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Age_Business_Minutes__c</fullName>
    <formula>Age_Business_Hours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Business Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>