force-app/main/default/objects/Case/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>RO-1827</description>
    <inlineHelpText>To enable the fetching of Jobs and sending applications</inlineHelpText>
    <label>API Key</label>
    <type>TextArea</type>
</CustomField>