force-app/main/default/objects/Case/fields/Assign_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Queue</label>
    <type>Checkbox</type>
</CustomField>