force-app/main/default/objects/Case/fields/ATS_Feed__c.field-meta.xml
<CustomField>
    <fullName>ATS_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATS Feed</label>
    <type>Checkbox</type>
</CustomField>