force-app/main/default/objects/Case/fields/ATS_Int_Go_Live_Account__c.field-meta.xml
<CustomField>
    <fullName>ATS_Int_Go_Live_Account__c</fullName>
    <description>RO-1759</description>
    <formula>Account.ATS_Int_Go_Live__c</formula>
    <inlineHelpText>Displays the value from the linked account</inlineHelpText>
    <label>ATS Int. Go-Live (Account)</label>
    <type>DateTime</type>
</CustomField>