force-app/main/default/objects/Case/fields/ATS_Int_Type_Account__c.field-meta.xml
<CustomField>
    <fullName>ATS_Int_Type_Account__c</fullName>
    <description>RO-1759</description>
    <formula>TEXT( Account.ATS_Int_Type__c )</formula>
    <inlineHelpText>Dispalys the value from the linked account</inlineHelpText>
    <label>ATS Int. Type (Account)</label>
    <type>Text</type>
</CustomField>