force-app/main/default/objects/Case/fields/ATS_Integrated__c.field-meta.xml
<CustomField>
    <fullName>ATS_Integrated__c</fullName>
    <description>Reference Account ATS Integrated Field</description>
    <formula>Account.ATS_Integrated__c</formula>
    <inlineHelpText>Reference Account ATS Integrated Field</inlineHelpText>
    <label>ATS Integrated</label>
    <type>Checkbox</type>
</CustomField>