force-app/main/default/objects/Case/fields/ATS_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>ATS_Name_Account__c</fullName>
    <description>RO-1759</description>
    <formula>TEXT( Account.plATSName__c )</formula>
    <inlineHelpText>Dispalys the value from the linked account</inlineHelpText>
    <label>ATS Name (Account)</label>
    <type>Text</type>
</CustomField>