force-app/main/default/objects/Case/fields/ATS_Type_processing_time__c.field-meta.xml
<CustomField>
    <fullName>ATS_Type_processing_time__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Confluence: ATS New Onboarding &amp; New Integration Process</inlineHelpText>
    <label>ATS Type &amp; processing time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy (2weeks)</fullName>
            </value>
            <value>
                <fullName>Complex (4-6Weeks)</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>