force-app/main/default/objects/Case/fields/Avg_Reach_Jobs_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Reach_Jobs_month__c</fullName>
    <description>RO - 2067 , RO - 2458</description>
    <inlineHelpText>The average number of REACH jobs that will be included in the feed per month</inlineHelpText>
    <label># Reach Jobs/month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>