force-app/main/default/objects/Case/fields/Backend_Account_Required__c.field-meta.xml
<CustomField>
    <fullName>Backend_Account_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box should be checked if a Backend Account has to be setup in addition to the Salesforce Account</description>
    <inlineHelpText>Box should be checked if a Backend Account has to be setup in addition to the Salesforce Account</inlineHelpText>
    <label>Backend Account Required</label>
    <type>Checkbox</type>
</CustomField>