force-app/main/default/objects/Case/fields/Backend_Link__c.field-meta.xml
<CustomField>
    <fullName>Backend_Link__c</fullName>
    <description>The link to the company with the same company ID in the backend.</description>
    <formula>HYPERLINK(&quot;https://production-backend.heyjobs.de/admin/advanced_companies/&quot; &amp;  TEXT(Account.txtCompanyId__c), &quot;Backend Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Backend Link</label>
    <type>Text</type>
</CustomField>