force-app/main/default/objects/Case/fields/bCloseCaseQuickAction__c.field-meta.xml
<CustomField>
    <fullName>bCloseCaseQuickAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Case Quick Action</label>
    <type>Checkbox</type>
</CustomField>