force-app/main/default/objects/Case/fields/bCompanyCreated__c.field-meta.xml
<CustomField>
    <fullName>bCompanyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Created</label>
    <type>Checkbox</type>
</CustomField>