force-app/main/default/objects/Case/fields/BE_Account_and_RP_User_required__c.field-meta.xml
<CustomField>
    <fullName>BE_Account_and_RP_User_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1760</description>
    <inlineHelpText>Tick the checkbox and add SF contact in the field User for Recruiter Portal only if BE Account and RP User are needed.</inlineHelpText>
    <label>BE Account and RP User required</label>
    <type>Checkbox</type>
</CustomField>