force-app/main/default/objects/Case/fields/BE_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>BE_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1440</description>
    <inlineHelpText>Only set to true when BE duplicate check process, described on confluence was completed</inlineHelpText>
    <label>BE Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>