force-app/main/default/objects/Case/fields/bHasBeenPublishedBefore__c.field-meta.xml
<CustomField>
    <fullName>bHasBeenPublishedBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Published Before</label>
    <type>Checkbox</type>
</CustomField>