force-app/main/default/objects/Case/fields/billing_Country__c.field-meta.xml
<CustomField>
    <fullName>billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>