force-app/main/default/objects/Case/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <description>Job Optimizations Account Info Reference</description>
    <formula>Account.Billing_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Information</label>
    <type>Text</type>
</CustomField>