force-app/main/default/objects/Case/fields/bInviteToRPSent__c.field-meta.xml
<CustomField>
    <fullName>bInviteToRPSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BE invitation to RP sent</label>
    <type>Checkbox</type>
</CustomField>