force-app/main/default/objects/Case/fields/Branded_Ads__c.field-meta.xml
<CustomField>
    <fullName>Branded_Ads__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Link to the Branded Ads Case</inlineHelpText>
    <label>Branded Ads</label>
    <length>255</length>
    <type>Text</type>
</CustomField>