force-app/main/default/objects/Case/fields/Branded_Ads_activated__c.field-meta.xml
<CustomField>
    <fullName>Branded_Ads_activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1759</description>
    <inlineHelpText>This checkbox must be ticked by CusOps before closing the case. Only activate Branded Ads in backend if requested in the case.</inlineHelpText>
    <label>Branded Ads activated</label>
    <type>Checkbox</type>
</CustomField>