force-app/main/default/objects/Case/fields/Branded_Ads_Link__c.field-meta.xml
<CustomField>
    <fullName>Branded_Ads_Link__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>If you have multiple images that should be uploaded, please provide a link to a Google Drive folder.</inlineHelpText>
    <label>Branded Ads Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>