force-app/main/default/objects/Case/fields/bUserRP__c.field-meta.xml
<CustomField>
    <fullName>bUserRP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BE user creation done</label>
    <type>Checkbox</type>
</CustomField>