force-app/main/default/objects/Case/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>RO-1759</description>
    <label>Campaign Name</label>
    <type>TextArea</type>
</CustomField>