force-app/main/default/objects/Case/fields/Campaign_Start__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>REACH ONLY | When should the campaign start? (starting date of campaign usually is on the 01. of the month)</inlineHelpText>
    <label>Campaign Start</label>
    <type>Date</type>
</CustomField>