force-app/main/default/objects/Case/fields/Candidate_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Delivery__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>How will applications be delivered? Full Integration, LinkOut (Link to Career Page) or Email (via RP)</inlineHelpText>
    <label>Candidate Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Integration</fullName>
                <label>ATS</label>
            </value>
            <value>
                <fullName>LinkOut</fullName>
                <label>Link-Out</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
                <isActive>false</isActive>
                <label>ATS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>