force-app/main/default/objects/Case/fields/Career_Page__c.field-meta.xml
<CustomField>
    <fullName>Career_Page__c</fullName>
    <formula>Opportunity__r.fmlCareerPage__c</formula>
    <label>Career Page</label>
    <type>Text</type>
</CustomField>