force-app/main/default/objects/Case/fields/Career_Page_data_entry__c.field-meta.xml
<CustomField>
    <fullName>Career_Page_data_entry__c</fullName>
    <description>Field to enter the Career Page for to-be-created Accounts on the Case.</description>
    <inlineHelpText>Field to enter the Career Page for to-be-created Accounts on the Case.</inlineHelpText>
    <label>Career Page (data entry)</label>
    <type>Url</type>
</CustomField>