force-app/main/default/objects/Case/fields/Channable_Project__c.field-meta.xml
<CustomField>
    <fullName>Channable_Project__c</fullName>
    <description>RO-1759</description>
    <label>Channable Project</label>
    <type>TextArea</type>
</CustomField>