force-app/main/default/objects/Case/fields/Check_Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Check_Account_Management__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Check Account Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>