force-app/main/default/objects/Case/fields/Checklist_in_CS_Bible_checked__c.field-meta.xml
<CustomField>
    <fullName>Checklist_in_CS_Bible_checked__c</fullName>
    <description>RO - 2251</description>
    <inlineHelpText>Please always go through the checklist in the Customer Success Sales Bible before submitting this Case.</inlineHelpText>
    <label>LegacyChecklist in Success Bible checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>