force-app/main/default/objects/Case/fields/Child_can_access_Parent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Child_can_access_Parent_Budget__c</fullName>
    <description>RO-1760</description>
    <inlineHelpText>Should the child company have access to the parent&apos;s budget? Select &apos;yes&apos; only if budget access is required.</inlineHelpText>
    <label>Child can access Parent Budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>