force-app/main/default/objects/Case/fields/Comment_Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Account_Management__c</fullName>
    <label>Comment Account Management</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>