force-app/main/default/objects/Case/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <description>Values from Typeform survey</description>
    <label>Communication Channel</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>