force-app/main/default/objects/Case/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <description>RO-1760</description>
    <inlineHelpText>In which city is the company located?</inlineHelpText>
    <label>Company Location</label>
    <type>TextArea</type>
</CustomField>