force-app/main/default/objects/Case/fields/Company_Short_Name_Sub_Domain_in_BE__c.field-meta.xml
<CustomField>
    <fullName>Company_Short_Name_Sub_Domain_in_BE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1440</description>
    <inlineHelpText>Did you enter the Company Short Name &amp; Sub-Domain in the BE?</inlineHelpText>
    <label>Company Short Name &amp; Sub-Domain in BE?</label>
    <type>Checkbox</type>
</CustomField>