force-app/main/default/objects/Case/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <description>RO - 2251</description>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACM Question</fullName>
            </value>
            <value>
                <fullName>Customer complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>