force-app/main/default/objects/Case/fields/Contact_Person_for_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_for_Integrations__c</fullName>
    <inlineHelpText>Contact details for technical support for Integrations (Email / Phone)</inlineHelpText>
    <label>Contact Person for Integrations</label>
    <type>TextArea</type>
</CustomField>