force-app/main/default/objects/Case/fields/Contract_Annotations__c.field-meta.xml
<CustomField>
    <fullName>Contract_Annotations__c</fullName>
    <description>RO-1273</description>
    <label>Contract Annotations</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>