force-app/main/default/objects/Case/fields/Contract_created__c.field-meta.xml
<CustomField>
    <fullName>Contract_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1759</description>
    <label>Contract created</label>
    <type>Checkbox</type>
</CustomField>