force-app/main/default/objects/Case/fields/Contract_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group_ID__c</fullName>
    <description>RO - 2557</description>
    <inlineHelpText>You can find this info in either the BE ( Contracts ) /Tableau.</inlineHelpText>
    <label>Contract Group ID</label>
    <length>56</length>
    <type>Text</type>
</CustomField>