force-app/main/default/objects/Case/fields/CPA_Target__c.field-meta.xml
<CustomField>
    <fullName>CPA_Target__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>The CPA (cost per application) the customer would like to achieve</inlineHelpText>
    <label>CPA Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>