force-app/main/default/objects/Case/fields/Created_and_Closed_on_same_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_and_Closed_on_same_Day__c</fullName>
    <formula>IF( DATE(YEAR(Created_Date__c),MONTH(Created_Date__c),DAY(Created_Date__c)) = 
    DATE(YEAR(Closed_Date__c),MONTH(Closed_Date__c),DAY(Closed_Date__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created and Closed on same Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>