force-app/main/default/objects/Case/fields/Created_by_Automation__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1761</description>
    <label>Created by Automation</label>
    <type>Checkbox</type>
</CustomField>