force-app/main/default/objects/Case/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <description>User Role</description>
    <formula>IF(
NOT(ISBLANK(Account.ParentId)),
HYPERLINK(
&apos;https://heyjobs.lightning.force.com/lightning/r/Account/&apos; &amp; Account.ParentId &amp; &apos;/view&apos;,
Account.Parent.Name,
&apos;_blank&apos;
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Created by Role</label>
    <type>Text</type>
</CustomField>