force-app/main/default/objects/Case/fields/Current_Channels_Andere__c.field-meta.xml
<CustomField>
    <fullName>Current_Channels_Andere__c</fullName>
    <label>Current Channels Andere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>