force-app/main/default/objects/Case/fields/Data_complete__c.field-meta.xml
<CustomField>
    <fullName>Data_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1759</description>
    <inlineHelpText>Before we can start the Onboarding we need to check the given data. If all is complete and usable, tick the checkbox which means the OB is ready to go.</inlineHelpText>
    <label>Data complete</label>
    <type>Checkbox</type>
</CustomField>