force-app/main/default/objects/Case/fields/Data_for_Candidate_Delivery_in_ATS__c.field-meta.xml
<CustomField>
    <fullName>Data_for_Candidate_Delivery_in_ATS__c</fullName>
    <description>RO-1759 , RO - 2458</description>
    <inlineHelpText>Mail for email delivery, client secret per migration, Kombo-Info</inlineHelpText>
    <label>Data for Candidate Delivery</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>