force-app/main/default/objects/Case/fields/dateGoLive__c.field-meta.xml
<CustomField>
    <fullName>dateGoLive__c</fullName>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>