force-app/main/default/objects/Case/fields/dateScheduledGoLive__c.field-meta.xml
<CustomField>
    <fullName>dateScheduledGoLive__c</fullName>
    <label>Scheduled Go-Live Date</label>
    <type>Date</type>
</CustomField>