force-app/main/default/objects/Case/fields/Days_Created_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Created_to_Closed__c</fullName>
    <formula>IF(
NOT(ISBLANK( Timestamp_Closed_Date__c )),
Timestamp_Closed_Date__c  -  Created_Date_Time__c  ,
IF(NOT(ISBLANK( Timestamp_Go_Live_Scheduled_Time__c )),
  Timestamp_Go_Live_Scheduled_Time__c - Created_Date_Time__c  ,
  IF(NOT(ISBLANK( Timestamp_Job_Live_Time__c )),
    Timestamp_Job_Live_Time__c  - Created_Date_Time__c  ,
     Timestamp_Lost_Time__c  - Created_Date_Time__c  
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Created to Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>