force-app/main/default/objects/Case/fields/dEmployees__c.field-meta.xml
<CustomField>
    <fullName>dEmployees__c</fullName>
    <label>Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>