force-app/main/default/objects/Case/fields/Description_RichText__c.field-meta.xml
<CustomField>
    <fullName>Description_RichText__c</fullName>
    <description>RO-1458</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>