force-app/main/default/objects/Case/fields/Did_your_Client_complain__c.field-meta.xml
<CustomField>
    <fullName>Did_your_Client_complain__c</fullName>
    <description>R0 - 2251</description>
    <label>Did your Client complain?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACM Question</fullName>
            </value>
            <value>
                <fullName>Customer complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>