force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Individual to processing time of each ATS</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>