force-app/main/default/objects/Case/fields/Easy_Apply__c.field-meta.xml
<CustomField>
    <fullName>Easy_Apply__c</fullName>
    <inlineHelpText>[Reach Only] Should Easy Apply should be used in the application flow?</inlineHelpText>
    <label>Easy Apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>