force-app/main/default/objects/Case/fields/Edit_Screening_Questions__c.field-meta.xml
<CustomField>
    <fullName>Edit_Screening_Questions__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Do the screening questions need to be adjusted or are they already correct according to the SQ catalog for the jobs</inlineHelpText>
    <label>Edit Screening Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>