force-app/main/default/objects/Case/fields/Email_domain__c.field-meta.xml
<CustomField>
    <fullName>Email_domain__c</fullName>
    <label>Email domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>